// Prisma schema for jinteki — Phase 1 (foundation).
//
// Scope note: this schema covers every entity from PROJECT_PLAN.md /
// PHASE_1_PLAN.md so later phases (NRDB sync, rules scraper, UI) don't
// require reshaping migrations. No sync logic, no scraper, and no UI query
// code exists yet — this is schema-only.
//
// *** History: the five pg_trgm GIN indexes below (search `trgm_idx`) ***
// They were originally created by hand-written SQL in the Phase 1 init
// migration, NOT declared in this file - Prisma's schema DSL has no way to
// express `USING GIN (col gin_trgm_ops)` on its own. Because they were
// invisible to schema.prisma, `prisma migrate dev`'s diff engine treated
// them as unknown drift and proposed dropping all five on every later
// migration; three migrations (…add_sync_run_and_ruling_nrdb_id,
// …add_rules_sync_type, …add_rule_mapping_fk) each had to hand-edit the
// generated SQL to strip those drops before applying - and one migration
// (20260731065236_add_formats_restrictions) skipped that edit and actually
// dropped all five for real. Fixed in two steps: 20260731070336_restore_
// trgm_indexes recreated them, then 20260803064956_declare_trgm_indexes
// added the `@@index(..., type: Gin, map: "...")` declarations now present
// on Card/Decklist/RuleSection below - confirmed via a real `prisma migrate
// dev --create-only` dry run (twice) that this makes Prisma's diff engine
// recognize them as already-correct (empty migration generated, no more
// proposed drops). This class of hazard should now be closed; if a future
// migration somehow still proposes dropping one of these, something about
// the index declaration stopped matching reality - investigate rather than
// just re-applying the drop.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------------------------------------------------------------------------
// Card catalog (populated by a later-phase NRDB sync script; empty for now)
// ---------------------------------------------------------------------------

model Faction {
  code        String @id
  description String

  cards Card[]
}

model Cycle {
  id          String    @id // NRDB card_cycles id, e.g. "borealis"
  name        String
  dateRelease DateTime?
  position    Int?
  raw         Json

  packs Pack[]
}

model Pack {
  code          String    @id
  name          String
  dateRelease   DateTime?
  size          Int?
  // Nullable so a first-ever packs-before-cycles ordering cannot fail a NOT NULL.
  cardCycleId   String?
  cardSetTypeId String?
  position      Int?
  raw           Json?

  cycle Cycle? @relation(fields: [cardCycleId], references: [id])
  cards Card[]
}

model Card {
  code        String   @id
  title       String
  typeCode    String
  factionCode String
  sideCode    String
  text        String?
  keywords    String[]
  packCode    String?
  raw         Json

  faction Faction @relation(fields: [factionCode], references: [code])
  pack    Pack?   @relation(fields: [packCode], references: [code])

  decklistsAsIdentity Decklist[]
  decklistCards       DecklistCard[]
  rulings             Ruling[]
  favoritedBy         CardFavorite[]

  // Declares the two pg_trgm GIN indexes hand-written into the Phase 1 init
  // migration, so `prisma migrate dev`'s diff engine recognizes them as
  // intentional instead of unexplained drift to drop (see the file-header
  // warning). `map:` pins the exact existing index name so this is
  // recognized as the SAME index, not a new one to create alongside it.
  @@index([title(ops: raw("gin_trgm_ops"))], type: Gin, map: "Card_title_trgm_idx")
  @@index([text(ops: raw("gin_trgm_ops"))], type: Gin, map: "Card_text_trgm_idx")
}

// ---------------------------------------------------------------------------
// Decklists (populated by a later-phase NRDB sync script; empty for now)
// ---------------------------------------------------------------------------

model Decklist {
  id           String    @id @default(cuid())
  name         String
  identityCode String
  // Promoted out of `raw` in Phase 8 (PHASE_8_PLAN.md item 1) so /decklists'
  // quick-view tabs can sort/filter ~74k+ rows without a per-request JSONB
  // extraction. Nullable, not backfill-blocking-required - mirrors
  // Format.description's precedent for a column a sync run populates rather
  // than one that must be non-null from row one. `nrdbUserId` is a String,
  // confirmed live against real synced rows (`raw->'attributes'->>'user_id'`
  // is `jsonb_typeof` "string" - NRDB's own username, e.g. "Nergaal", not a
  // numeric id), matching `DecklistAttributes.user_id: string | null` in
  // src/lib/nrdb/types.ts.
  createdAt  DateTime?
  updatedAt  DateTime?
  nrdbUserId String?
  raw        Json
  // Null means NRDB-synced. User-created rows always set this.
  ownerId    String?
  // Default true so existing NRDB rows stay public without a backfill.
  // User create/clone always pass false unless the publish checkbox is on.
  isPublic   Boolean  @default(true)
  notes      String?

  identity Card           @relation(fields: [identityCode], references: [code])
  cards    DecklistCard[]
  owner    User?          @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  favoritedBy DecklistFavorite[]

  // See Card's matching comment above.
  @@index([name(ops: raw("gin_trgm_ops"))], type: Gin, map: "Decklist_name_trgm_idx")
  @@index([createdAt])
  @@index([updatedAt])
  @@index([ownerId])
}

model DecklistCard {
  decklistId String
  cardCode   String
  quantity   Int

  decklist Decklist @relation(fields: [decklistId], references: [id], onDelete: Cascade)
  card     Card     @relation(fields: [cardCode], references: [code])

  @@id([decklistId, cardCode])
}

// ---------------------------------------------------------------------------
// Official rulings (populated by a later-phase NRDB sync script; empty for now)
// ---------------------------------------------------------------------------

model Ruling {
  id       Int @id @default(autoincrement())
  // NRDB's own numeric ruling id (the "rulings" resource's JSON:API `id`).
  // Added in Phase 2 so sync-rulings.ts has a natural key to upsert on -
  // without it there's no way to idempotently re-run the sync (the local
  // autoincrement `id` can't be known in advance, and no other column
  // combination is guaranteed unique).
  nrdbId               Int      @unique
  cardCode             String
  question             String?
  answer               String?
  textRuling           String?
  nsgRulesTeamVerified Boolean  @default(false)
  updatedAt            DateTime @updatedAt

  card Card @relation(fields: [cardCode], references: [code])
}

// ---------------------------------------------------------------------------
// Comprehensive rules glossary
//
// RuleSection is populated by src/sync/sync-rules.ts (`pnpm sync:rules`,
// added in Phase 3) - a scraper for rules.nullsignal.games. RuleMapping is
// populated by prisma/seed.ts from prisma/rule-mapping-data.ts.
//
// Phase 1 deliberately left RuleMapping.ruleSectionId as a plain string
// column with NO db-level foreign key / Prisma relation to RuleSection,
// since RuleSection had zero rows at the time (a FK would have made the
// Phase 1 seed fail). Phase 3 activates the real FK now that RuleSection is
// populated for real (119 rows) and every RuleMapping row has been verified
// to reference a real RuleSection.id (see prisma/migrations and
// agent-reports/phase-3.md).
// ---------------------------------------------------------------------------

model RuleSection {
  id       String @id
  title    String
  anchor   String
  bodyText String

  mappings RuleMapping[]

  // See Card's matching comment above.
  @@index([title(ops: raw("gin_trgm_ops"))], type: Gin, map: "RuleSection_title_trgm_idx")
  @@index([bodyText(ops: raw("gin_trgm_ops"))], type: Gin, map: "RuleSection_bodyText_trgm_idx")
}

model RuleMapping {
  id            String @id @default(cuid())
  key           String
  ruleSectionId String

  ruleSection RuleSection @relation(fields: [ruleSectionId], references: [id])

  @@unique([key, ruleSectionId])
  @@index([key])
}

// ---------------------------------------------------------------------------
// Users, roles, and Auth.js (next-auth@beta / v5) required tables
// ---------------------------------------------------------------------------

enum Role {
  ADMIN
  USER
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  role          Role      @default(USER)

  accounts Account[]
  sessions Session[]

  cardFavorites     CardFavorite[]
  decklistFavorites DecklistFavorite[]
  ownedDecklists    Decklist[]
}

// Standard Auth.js Prisma-adapter shape, unmodified.
model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
}

// ---------------------------------------------------------------------------
// Favorites — two plain join tables rather than one polymorphic table
// ---------------------------------------------------------------------------

model CardFavorite {
  userId    String
  cardCode  String
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  card Card @relation(fields: [cardCode], references: [code], onDelete: Cascade)

  @@id([userId, cardCode])
}

model DecklistFavorite {
  userId     String
  decklistId String
  createdAt  DateTime @default(now())

  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  decklist Decklist @relation(fields: [decklistId], references: [id], onDelete: Cascade)

  @@id([userId, decklistId])
}

// ---------------------------------------------------------------------------
// Formats & restrictions (Most Wanted List / format-legality data) — Phase 6.
// Populated by src/sync/sync-restrictions.ts.
//
// Real API shape (verified live against api.netrunnerdb.com/api/v3/public,
// not the plan's original guessed draft - see agent-reports/phase-6.md):
// a `Format` (Standard/Startup/Eternal/...) points at whichever `Restriction`
// (a single named MWL/ban-list snapshot, e.g. "Standard Ban List 26.03") is
// currently active for it via `activeRestrictionId`. A Restriction's actual
// banned/restricted/points verdicts are keyed by card code inside `raw`
// (`attributes.verdicts`) - not flattened into a separate per-card join
// table, since NRDB's own `cards` resource *also* already carries a per-card
// `restrictions` history blob (keyed by restriction id) in `Card.raw`, so a
// second normalized copy of the same banned/restricted/points membership
// isn't needed to answer "is this card currently banned/restricted in this
// format" - only the format -> active-restriction-id link was missing, which
// is what this table actually adds.
//
// `activeRestrictionId` is deliberately a plain string, not a Prisma
// `@relation` - avoids a Format<->Restriction insert-ordering dependency
// (Format rows are upserted before the Restriction rows they point at exist
// yet on a first-ever sync), same reasoning Phase 1 used for
// `RuleMapping.ruleSectionId` before RuleSection had real rows.
// ---------------------------------------------------------------------------

model Format {
  id                  String  @id // NRDB format id, e.g. "standard", "eternal"
  name                String
  activeRestrictionId String?
  // Promoted from Format.raw.attributes.active_card_pool_id - Phase 10 §2,
  // same pattern as activeRestrictionId above (a plain string, no @relation,
  // to avoid a Format<->CardPool insert-ordering dependency on a first-ever
  // sync - same reasoning activeRestrictionId's own comment gives).
  activeCardPoolId String?
  // Hand-curated prose (prisma/format-description-data.ts, seeded by
  // prisma/seed.ts), NOT synced from NRDB - the v3 `/formats` API has no
  // description/summary field at all (confirmed live 2026-07-30, see
  // agent-reports/format-descriptions-links-and-search-plan.md §2a).
  // Must stay nullable: src/sync/sync-restrictions.ts's mapFormat() never
  // sets this field, so `create` (the very first sync, before the seed has
  // ever run) must not fail a NOT NULL constraint - same ordering hazard as
  // RuleMapping.ruleSectionId above.
  description String?
  raw         Json

  restrictions Restriction[]
  cardPools    CardPool[]
}

model Restriction {
  id        String    @id // NRDB restriction/snapshot id, e.g. "standard_ban_list_26_03"
  name      String
  formatId  String
  dateStart DateTime?
  raw       Json

  format Format @relation(fields: [formatId], references: [id])
}

// ---------------------------------------------------------------------------
// Card pools ("rotation" data) — Phase 10 §2. Populated by
// src/sync/sync-card-pools.ts from NRDB's `card_pools` resource - a
// DIFFERENT resource from `card_sets` (Pack) and from `card_cycles` (Cycle).
// A
// `CardPool` is one named, dated-or-undated snapshot of "every card cycle
// legal in format X as of this pool" (e.g. Standard's "Seventh Rotation",
// "Pre Rotation", or the currently-active "Standard 2026 - Vantage Point").
//
// Confirmed live 2026-09-04 (api.netrunnerdb.com/api/v3/public/card_pools):
// unlike Restriction, a card_pools resource carries NO date_start and NO
// per-snapshot "active" flag of its own - just { name, format_id,
// card_cycle_ids, updated_at, num_cards }. So Restriction's active/
// scheduled/past classification (Phase 10 §1) does NOT transfer to
// CardPool - there's nothing to classify against. This was confirmed at
// build time per the plan's explicit instruction to check, not assumed.
//
// `rotationOrdinal`/`rotationDateStart` are populated only for the subset of
// card pools that are genuinely one of NSG's numbered "Nth Rotation" events
// (Standard-only) - sourced from netrunner-cards-json's root-level
// `rotations.json` file (a repo file, not an API resource, fetched
// separately by the sync step), matched by transforming that file's
// `code` ("rotation-2017") into the matching card_pools id
// ("rotation_2017"). Deliberately NOT derived by string-matching
// `card_pools.attributes.name` against `.*Rotation$` - `rotation_2020`
// ("Salvaged Memories") is a real, non-rotation-numbered pool that would
// break a naive sequential match (confirmed live - see rotationOrdinal's
// non-sequential test case in sync-card-pools.test.ts). Both columns are
// null for every pool that isn't one of the seven numbered rotations
// (pre_rotation, the currently-active pool, salvaged_memories, and every
// non-Standard format's pools all have null here) - that's expected, not a
// sync gap.
// ---------------------------------------------------------------------------

model CardPool {
  id                String     @id // NRDB card_pool id, e.g. "rotation_2017", "standard_2026_vantage_point"
  name              String
  formatId          String
  cardCycleIds      String[]
  rotationOrdinal   Int?
  rotationDateStart DateTime?
  raw               Json

  format Format @relation(fields: [formatId], references: [id])
}

// ---------------------------------------------------------------------------
// Remote access allowlist + sign-in audit log — Phase 9
// (PHASE_9_PLAN.md §1, plans/design/REMOTE_ACCESS_DESIGN.md Decision 5).
//
// AllowedLogin is keyed by GitHub `login` (username), not User.id/email -
// it must be populatable *before* the person it refers to has ever signed
// in, so it can't reference anything that only exists after their first
// login. `active` (not row presence/absence) is the actual gate, so
// deactivating someone keeps their addedAt/note history instead of losing
// it.
//
// LoginAttempt is deliberately NOT a Prisma relation to AllowedLogin - a
// relation would force every attempt to reference an existing AllowedLogin
// row, but the whole point of logging attempts is to also capture logins
// from GitHub accounts that were never allowlisted at all (a stranger
// trying the URL). `githubLogin` is the key column throughout (not
// `userId`) since a rejected attempt never gets a User row to point at.
// ---------------------------------------------------------------------------

model AllowedLogin {
  githubLogin String   @id
  active      Boolean  @default(true)
  addedAt     DateTime @default(now())
  updatedAt   DateTime @updatedAt
  note        String? // optional: who this is / why they were added — for the owner's own reference
}

model LoginAttempt {
  id          String   @id @default(cuid())
  githubLogin String
  allowed     Boolean
  attemptedAt DateTime @default(now())

  @@index([githubLogin])
  @@index([attemptedAt])
}

// ---------------------------------------------------------------------------
// Sync run log — Phase 2. Populated by src/sync/*.ts. Gives the admin sync
// page ("did the last sync work, when, how many records") something to show.
// ---------------------------------------------------------------------------

enum SyncType {
  FACTIONS_PACKS
  CARDS
  DECKLISTS
  RULINGS
  RULES
  RESTRICTIONS
  CARD_POOLS
}

enum SyncStatus {
  RUNNING
  SUCCESS
  FAILED
}

model SyncRun {
  id           String     @id @default(cuid())
  type         SyncType
  status       SyncStatus
  startedAt    DateTime   @default(now())
  finishedAt   DateTime?
  recordCount  Int?
  errorMessage String?

  @@index([type, status, startedAt])
}
